# nqrduck-spectrometer

./: CHANGELOG.md  pyproject.toml
.forgejo/workflows/: python-publish.yml
src/Spectrometer/: spectrometer_widget.py
src/Spectrometer/resources/: spectrometer.ini
src/nqrduck-spectrometer/: spectrometer_controller.py  spectrometer_view.py
src/nqrduck-spectrometer/resources/: spectrometer_widget.ui
src/nqrduck-spectrometer/spectrometers/LimeNQR/: limenqr.py
src/nqrduck_spectrometer/: __init__.py  base_spectrometer.py  base_spectrometer_controller.py  base_spectrometer_model.py  base_spectrometer_pulseparameters.py  base_spectrometer_view.py  base_spectrometer_widget.py  controller.py  measurement.py  model.py  pulse_sequence.py  pulseparameters.py  pulsesequence.py  settings.py  spectrometer.py  spectrometer_controller.py  spectrometer_model.py  spectrometer_view.py  view.py  visual_settings.py  widget.py
src/nqrduck_spectrometer/resources/: base_spectrometer_widget.ui  spectrometer.ini  spectrometer_widget.ui
src/resources/: spectrometer.ini
