[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "nqrduck-spectrometer"
version = "0.0.6"
authors = [
  { name="Julia Pfitzer", email="git@jupfi.me" },
]

description = "A module for the NQRduck program (a simple python script™) to control different NQR/NMR spectrometers."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "matplotlib",
    "pyqt5",
    "NQRduck",
]

[project.entry-points."nqrduck"]
"nqrduck-spectrometer" = "nqrduck_spectrometer.spectrometer:Spectrometer"